<resources>
    <string name="app_name">My Inventory 1</string>
    <string name="the_table_contains">The table contains:</string>
    <string name="items">items</string>
    <string name="add_product">Add product</string>
    <string name="product_supplier_name">Supplier name</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price in USD</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_supplier_phone_number">Supplier phone</string>
    <string name="required_field">Required!</string>
    <string name="price_cannot_be_negative">Price cannot be negative</string>
    <string name="quantity_cannot_be_negative">Quantity cannot be negative</string>
    <string name="supplier_one">Supplier One</string>
    <string name="supplier_two">Supplier Two</string>
    <string name="supplier_three">Supplier three</string>
    <string name="supplier_unknown">Unknown Supplier</string>
    <string name="action_save">Save</string>
</resources>
